package specpaxos;

message Request {
     required uint64 clientid = 1;
     required uint64 clientreqid = 2;
     required bytes op = 3;
}

message UnloggedRequest {
     required uint64 clientid = 1;
     required uint64 clientreqid = 2;
     required bytes op = 3;
}
